# NeoPDFReader

./: README.md  RELEASE_NOTES.md  design.md  index.html  package.json  pnpm-lock.yaml  req.md
.github/workflows/: build.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.build-tools/: xcrun
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  main.rs  state.rs
src-tauri/src/cache/: bitmap_cache.rs  mod.rs
src-tauri/src/commands/: document.rs  mod.rs  render.rs  search.rs
src-tauri/src/pdf/: document.rs  mod.rs  renderer.rs  text.rs
src-tauri/src/scheduler/: mod.rs  priority_queue.rs
src-tauri/src/search/: indexer.rs  mod.rs  query.rs
src/components/PageViewport/: PageViewport.css  PageViewport.tsx  index.ts
src/components/SearchBar/: SearchBar.css  SearchBar.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/StatusBar/: StatusBar.css  StatusBar.tsx
src/components/TabBar/: TabBar.css  TabBar.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/services/: openFile.ts  tauriApi.ts
src/store/: documentStore.ts  navigationStore.ts  searchStore.ts  tabStore.ts  viewStore.ts
src/types/: index.ts
