[package]
name = "neo-pdf-reader"
version = "0.1.0"
description = "A high-performance cross-platform PDF reader"
authors = ["you"]
edition = "2021"

[lib]
name = "neo_pdf_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mupdf = "0.6"
tantivy = "0.22"
jieba-rs = "0.7"
lru = "0.12"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
base64 = "0.22"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
